--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,24 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDk_1Cmo7qII_6onybyb9Fy0rZ2X0pXTds",
+    authDomain: "budget-wise-81413.firebaseapp.com",
+    projectId: "budget-wise-81413",
+    storageBucket: "budget-wise-81413.firebasestorage.app",
+    messagingSenderId: "133939376227",
+    appId: "1:133939376227:web:aa26721cd290211e528856"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
