google registracija in log in za ios android in web i routes

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>budget_wise</title>
   <link rel="manifest" href="manifest.json">
+  <meta name="google-signin-client_id" content="133939376227-4iegch3l47jqcb315a2hf8u7vc8lurn9.apps.googleusercontent.com" />
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
